tests/tooling/fixtures/native/recovery/negative/negative_switch_duplicate_case.objc3
// Expected diagnostic code(s): O3S206.
module NegativeSwitchDuplicateCase;

fn main() -> i32 {
  let x = 1;
  switch (x) {
    case 1:
      return 10;
    case 1:
      return 20;
    default:
      return 0;
  }
  return 0;
}
